--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,185 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap');
+
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+  padding: 0;
+  scroll-behavior: smooth;
+  font-family: 'Indie Flower', cursive, sans-serif;
+}
+:root {
+  --main-bg-green: #a7ddaad2;
+  --main-bg-yellow: #fff4b0;
+  --main-bg-red: #fcaca0;
+
+  --light-bg-yellow: #fff7c4;
+  --light-bg-red: #ffc5bc;
+
+  --bright-bg-yellow: #fdf09d;
+  --bright-bg-red: #ffa395;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+body {
+  font-weight: 600;
+  color: #000000;
+  line-height: 2;
+  min-height: 100vh;
+  font-size: 1.5rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+}
+
+header {
+  height: 5rem;
+}
+
+ul {
+  list-style: none;
+  padding: 0;
+}
+li {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin: 5px 0;
+  min-width: 32vw;
+}
+
+select,
+option {
+  font-family: 'Indie Flower', cursive, sans-serif;
+  font-size: 1rem;
+  font-weight: 600;
+  display: block;
+  margin: 0.5rem 0 0.5rem auto;
+}
+
+button {
+  display: inline-block;
+  padding: 10px;
+  font-family: 'Indie Flower', cursive, sans-serif;
+  font-weight: 600;
+  border: solid 2px black;
+}
+button {
+  margin-left: 0.05rem;
+}
+
+button:hover,
+i:hover {
+  cursor: pointer;
+}
+
+button:hover,
+button:focus-visible {
+  transform: scale(1.1);
+}
+
+img {
+  width: 12rem;
+  height: 12rem;
+}
+
+input {
+  font-size: 1.3rem;
+  min-width: 15rem;
+  height: 3rem;
+  font-family: 'Indie Flower', cursive, sans-serif;
+  margin-bottom: 0.5rem;
+}
+
+form {
+  margin-bottom: 1rem;
+}
+
+.main {
+  margin: 1rem 0;
+  padding-block: clamp(1rem, 3vw, 2rem);
+  padding-inline: clamp(1.5rem, 5vw, 3rem);
+  border: solid 3px black;
+}
+.done {
+  background-color: var(--main-bg-green);
+}
+.yellow {
+  background-color: var(--main-bg-yellow);
+}
+.red {
+  background-color: var(--main-bg-red);
+}
+.btn-addToDo {
+  padding-inline: 3rem;
+  font-size: 1.1rem;
+  background-image: linear-gradient(
+    62deg,
+    var(--light-bg-yellow) 0%,
+    var(--light-bg-red) 100%
+  );
+}
+
+.flex {
+  display: flex;
+}
+
+.text {
+  scrollbar-width: thin;
+  overflow-x: auto;
+  white-space: nowrap;
+  max-width: calc(35vw + 3.5rem);
+  font-size: 1.3rem;
+  text-align: start;
+}
+
+.modal {
+  position: fixed;
+  z-index: 1;
+  top: 0;
+  left: 0;
+  width: 100vw;
+  height: 100vh;
+  background-color: rgba(0, 0, 0, 0.815);
+  backdrop-filter: blur(5px);
+  display: grid;
+  place-items: center;
+}
+
+.modal-content {
+  position: absolute;
+  left: 50%;
+  transform: translate(-50%, 0);
+  display: flex;
+  flex-direction: column;
+  padding: 2rem;
+  max-width: 50rem;
+  z-index: 2;
+}
+
+.scrollbars::-webkit-scrollbar {
+  height: 5px;
+}
+
+.scrollbars::-webkit-scrollbar-track {
+  background: #f1f1f1;
+}
+
+.scrollbars::-webkit-scrollbar-thumb {
+  background-image: linear-gradient(
+    62deg,
+    var(--light-bg-yellow) 0%,
+    var(--light-bg-red) 100%
+  );
+  border-radius: 10px;
+}
+
+.scrollbars::-webkit-scrollbar-thumb:hover {
+  background-image: linear-gradient(
+    62deg,
+    var(--bright-bg-yellow) 0%,
+    var(--bright-bg-red) 100%
+  );
 }
